# sekhmet-core

./: .clang-format  CMakeLists.txt  README.md  TODO.md
core/: CMakeLists.txt  access_guard.hpp  assert.hpp  buffered_vector.hpp  config.hpp  define.h  delegate.hpp  dense_map.hpp  dense_multiset.hpp  dense_set.hpp  expected.hpp  hash.hpp  interned_string.hpp  logger.hpp  meta.hpp  object.hpp  ordered_map.hpp  ordered_set.hpp  plugin.hpp  property.hpp  resources.hpp  service.hpp  sparse_map.hpp  sparse_set.hpp  static_string.hpp  thread_pool.hpp  type_name.hpp  uri.hpp  utility.hpp  uuid.hpp  version.hpp  zstd.hpp
core/debug/: assert.hpp
core/debug/detail/: CMakeLists.txt  assert.cpp
core/detail/: CMakeLists.txt  alloc_util.hpp  assert.cpp  basic_pool.hpp  buffer_allocator.hpp  config.cpp  dense_hash_table.hpp  ebo_base_helper.hpp  event.hpp  flagged_integer.hpp  intern.cpp  logger.cpp  object.cpp  ordered_hash_table.hpp  owned_ptr.hpp  platform.h  plugin.cpp  service.cpp  sparse_hash_table.hpp  string_util.hpp  thread_pool.cpp  type_storage.hpp  uri.cpp  uuid.cpp  zstd.cpp
core/detail/type_info/: CMakeLists.txt  any.cpp  any.hpp  any_range.cpp  any_range.hpp  any_string.cpp  any_string.hpp  any_table.cpp  any_table.hpp  any_tuple.cpp  any_tuple.hpp  fwd.hpp  traits.hpp  type_data.cpp  type_data.hpp  type_db.cpp  type_db.hpp  type_error.cpp  type_error.hpp  type_factory.hpp  type_info.cpp  type_info.hpp
core/math/: CMakeLists.txt  quaternion.hpp  ray.hpp  utility.hpp
core/math/detail/: CMakeLists.txt  matrix.hpp  policy.hpp  sysrandom.hpp
core/math/detail/quaternion/: CMakeLists.txt  geometric.hpp  type.hpp
core/math/detail/vector/: CMakeLists.txt  type.hpp
core/math/detail/vector/func/: CMakeLists.txt  geometric.hpp
core/math/detail/vector/func/fwd/: CMakeLists.txt
core/math/detail/vector/func/x86/: CMakeLists.txt  arithmetic.hpp  bitwise.hpp  common.hpp  utility.cpp
core/math/detail/vector/func/x86/f32/: exponential.cpp  exponential.hpp  relational.hpp  trigonometric.cpp  trigonometric.hpp  utility.hpp
core/math/detail/vector/func/x86/f64/: exponential.cpp  exponential.hpp  relational.hpp  utility.hpp
core/math/detail/vector/func/x86/i32/: relational.hpp
core/rhi/: CMakeLists.txt  texture.hpp
core/serialization/: CMakeLists.txt  generic.hpp  json.hpp  ranges.hpp  tuples.hpp
core/serialization/detail/: CMakeLists.txt  archive_error.hpp  manipulators.hpp  traits.hpp  tuples.hpp
core/serialization/detail/json/: CMakeLists.txt  json_error.hpp  object.hpp  type.hpp  ubj_archive.hpp
core/system/: CMakeLists.txt  char_file.hpp  clipboard.hpp  native_file.hpp  native_filemap.hpp
core/system/detail/: CMakeLists.txt  clipboard.cpp  file_mode.hpp
core/system/detail/unix/: CMakeLists.txt  file_common.hpp  native_file.cpp  native_file.hpp  native_filemap.cpp  native_filemap.hpp
sekhmet/: CMakeLists.txt  assets.hpp  config.hpp  dense_map.hpp  meta.hpp  ordered_set.hpp  plugin.hpp  service.hpp  sparse_set.hpp  thread_pool.hpp  uri.hpp  uuid.hpp
sekhmet/debug/: CMakeLists.txt  logger.hpp
sekhmet/debug/detail/: CMakeLists.txt  logger.cpp  plugin.cpp
sekhmet/detail/: CMakeLists.txt  assets.cpp  event.hpp  platform.h  plugin.cpp  thread_pool.cpp  zstd.cpp
sekhmet/detail/type_info/: type_data.hpp
sekhmet/math/: matrix.hpp  vector.hpp
sekhmet/math/detail/: CMakeLists.txt  policy.hpp
sekhmet/math/detail/vector/func/: CMakeLists.txt
sekhmet/math/detail/vector/func/fwd/: CMakeLists.txt
sekhmet/math/detail/vector/func/x86/: CMakeLists.txt  arithmetic.hpp  common.hpp  geometric.hpp  utility.hpp
sekhmet/math/detail/vector/func/x86/f32/: exponential.hpp  trigonometric.hpp
sekhmet/math/detail/vector/func/x86/f64/: exponential.hpp  trigonometric.hpp
sekhmet/serialization/: CMakeLists.txt
sekhmet/serialization/detail/json/: CMakeLists.txt
sekhmet/system/: native_file.hpp  native_filemap.hpp
sekhmet/system/detail/: CMakeLists.txt  native_file.cpp  native_filemap.cpp
sekhmet/system/detail/unix/: CMakeLists.txt  native_file.cpp  native_file.hpp  native_filemap.cpp  native_filemap.hpp
test/: CMakeLists.txt  main.cpp  runtime_tests.cpp  test_dense_map.cpp  test_dense_multiset.cpp  test_dense_set.cpp  test_events.cpp  test_type_info.cpp  tests.hpp  utility_tests.cpp
